--- a/计算视觉实践-练习3/实验报告.md
+++ b/计算视觉实践-练习3/实验报告.md
@@ -171,10 +171,16 @@ for epoch in range(epochs):
     torch.save(model, f"model_{epoch}.pth")
 ```
 
-##### PSNR和SSIM指标
+##### PSNR、SSIM指标及超分结果
 
 本实验在Set5上训练500个epoch，并在每个epoch进行测试得到以下结果：
 
 **PSNR: 29.592414453705835** 
 
 **SSIM: 0.9646698355674743**
+
+![image-20240518222651031](.\assets\image-20240518222651031-1716042417254-1.png)
+
+
+
+但是效果并不理想
