--- a/计算视觉实践-练习4/实验报告.md
+++ b/计算视觉实践-练习4/实验报告.md
@@ -14,7 +14,7 @@ Planar Homography：如果两台相机所拍摄的场景为同一个平面，则
 
 Homography：如果两台相机拍摄的是同一个场景，但两台相机之间只有旋转角度的不同，没有任何位移，则这两台相机之间的关系称为Homography。
 
-![img](.\assets\v2-9b76c047c917c8a05a370c314c6e775f_1440w.webp)
+![img](./assets/v2-9b76c047c917c8a05a370c314c6e775f_1440w.webp)
 
 图中两台相机相对于平面上的三维坐标点拍照，以 𝑄 表示该点相对于Camera 𝐶 的相机坐标， 𝑄′ 表示相对Camera 𝐶′ 的相机坐标，则 𝑄 和 𝑄′ 之间的关系为： 𝑄′=𝑅𝑄+𝑡 , 𝑅 和 𝑇 分别是相机 和𝐶和𝐶′ 相对旋转 rotation和位移translation。
 
